# altccents

./: Cargo.toml  README.md  add_to_startup.bat  build.rs
altccents/: Cargo.toml
altccents/src/: hook.rs  main.rs  window.rs
altccents_dll/: Cargo.toml
altccents_dll/src/: accent.rs  data.rs  lib.rs  tests.rs
resources/: resources.rc
src/: config.rs  data.rs  draw.rs  hook.rs  main.rs  popup.rs  resources.rs  session.rs  tray.rs  window.rs
src/config/: args.rs  mod.rs
src/hook/: accent.rs  data.rs  mod.rs  tests.rs  timer.rs
