[package]
name = "altccents"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "altccents.exe"
LegalCopyright = "Copyright © 2024"
ProductName = "Altccents"
FileDescription = "Type accent characters faster"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Media_Audio"
]
